fix(Button): add contrast for selected state in dark theme

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -194,7 +194,9 @@ $block: '.#{$ns}button';
                 --yc-button-background-color: var(--yc-color-base-selection);
                 --yc-button-background-color-hover: var(--yc-color-base-selection-hover);
 
-                @include button-text-color(var(--yc-color-text-special));
+                @include button-text-color(
+                    var(--yc-my-color-brand-text, var(--yc-color-text-special))
+                );
             }
         }
 
